--- a/announcements-events.html
+++ b/announcements-events.html
@@ -114,7 +114,7 @@
   </div>
   <div class="bottom-nav">
     <a href="home.html"><i class="fas fa-home"></i></a>
-    <a href="#" class="active"><i class="fas fa-bullhorn"></i></a>
+    <a href="announcement-events.html" class="active"><i class="fas fa-bullhorn"></i></a>
     <a href="downloads.html"><i class="fas fa-download"></i></a>
     <a href="cbt.html"><i class="fas fa-question"></i></a>
     <a href="leaderboard.html"><i class="fas fa-trophy"></i></a>
