--- a/home.html
+++ b/home.html
@@ -143,7 +143,7 @@
 
   <div class="container">
     <div class="welcome-box">
-      <h2 id="welcome">Welcome, Student</h2>
+      <h2 id="welcome">Welcome</h2>
       <p id="matricDisplay"></p>
     </div>
 
@@ -209,10 +209,14 @@
     const matric = document.getElementById("matricDisplay");
     const fullName = sessionStorage.getItem("userFullName");
     const matricNumber = sessionStorage.getItem("userMatric");
+
     if (fullName) {
-      const firstName = fullName.split(" ")[0];
+      const firstName = fullName.split(" ")[0].toUpperCase();
       welcome.textContent = `Welcome, ${firstName}`;
+    } else {
+      welcome.textContent = "Welcome, Student";
     }
+
     if (matricNumber) {
       matric.textContent = `Matric Number: ${matricNumber}`;
     }
