--- a/cbt.html
+++ b/cbt.html
@@ -1,56 +1,42 @@
 <!DOCTYPE html><html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>CBT | Finance Point</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>CBT Practice</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
   <style>
     body {
       font-family: 'Segoe UI', sans-serif;
-      background: #000 url('https://cdn.jsdelivr.net/gh/Julian-Nash/assets@main/tech-background.gif') center/cover no-repeat;
+      background-color: #000;
+      background-image: url('https://cdn.jsdelivr.net/gh/Julian-Nash/assets@main/tech-background.gif');
+      background-size: cover;
+      background-position: center;
       color: gold;
-      margin: 0;
-      padding-bottom: 100px;
+      padding: 20px;
     }
-    header {
-      background-color: rgba(20, 20, 20, 0.95);
+    h1, h2 {
       text-align: center;
-      padding: 15px;
-      font-size: 1.6rem;
-      font-weight: bold;
-      box-shadow: 0 0 10px gold;
-      position: sticky;
-      top: 0;
-      z-index: 1000;
-    }
-    .container {
-      max-width: 900px;
-      margin: auto;
-      padding: 20px;
-    }
-    .section {
-      background-color: rgba(30, 30, 30, 0.9);
-      border-radius: 10px;
-      padding: 20px;
-      margin-top: 20px;
-      box-shadow: 0 0 10px rgba(255, 215, 0, 0.2);
     }
     select, button {
       padding: 10px;
-      margin-top: 10px;
-      border-radius: 5px;
-      border: none;
       font-size: 1rem;
-    }
-    .question {
-      margin-bottom: 20px;
-    }
-    .question h4 {
-      margin-bottom: 8px;
-    }
-    label {
+      margin: 10px auto;
       display: block;
-      margin: 5px 0;
+      border-radius: 6px;
+      border: none;
+    }
+    .question-box {
+      background-color: rgba(25, 25, 25, 0.9);
+      padding: 20px;
+      border-radius: 10px;
+      margin-top: 20px;
+      box-shadow: 0 0 8px gold;
+    }
+    .option {
+      margin: 10px 0;
+    }
+    .option input {
+      margin-right: 10px;
     }
     .bottom-nav {
       position: fixed;
@@ -73,105 +59,61 @@
       opacity: 0.4;
       pointer-events: none;
     }
-    @media(min-width: 768px) {
-      .bottom-nav { display: none; }
-    }
   </style>
 </head>
 <body>
-  <header>CBT Practice</header>
-  <div class="container">
-    <div class="section">
-      <label for="level">Select Your Level:</label>
-      <select id="level">
-        <option value="100">100 Level</option>
-        <option value="200">200 Level</option>
-        <option value="300">300 Level</option>
-        <option value="400">400 Level</option>
-      </select>
-      <button onclick="loadQuestions()">Start Practice</button>
-    </div><div class="section" id="questions-container" style="display:none"></div>
-
-  </div>  <div class="bottom-nav">
+  <h1>CBT Practice</h1>
+  <select id="levelSelect">
+    <option value="">Select Your Level</option>
+    <option value="100">100 Level</option>
+    <option value="200">200 Level</option>
+    <option value="300">300 Level</option>
+    <option value="400">400 Level</option>
+  </select>
+  <button id="startPracticeBtn">Start Practice</button>  <div id="quizContainer"></div>  <div class="bottom-nav">
     <a href="home.html"><i class="fas fa-home"></i></a>
     <a href="announcement-events.html"><i class="fas fa-bullhorn"></i></a>
     <a href="downloads.html"><i class="fas fa-download"></i></a>
-    <a href="#" class="active"><i class="fas fa-question"></i></a>
+    <a href="cbt.html" class="active"><i class="fas fa-question"></i></a>
     <a href="feedback.html"><i class="fas fa-comment"></i></a>
-  </div>  <script>
-    const questions = {
-      "100": [
-        {
-          q: "Which of the following best defines finance?",
-          options: ["Managing time", "Investing in crypto", "Raising and managing funds", "Saving money in a bank"],
-          answer: "Raising and managing funds"
-        },
-        {
-          q: "What does a budget help you do?",
-          options: ["Spend freely", "Avoid exams", "Track expenses", "Hack ATMs"],
-          answer: "Track expenses"
-        }
-      ],
-      "200": [
-        {
-          q: "What is working capital?",
-          options: ["Capital punishment", "Cash from parents", "Current assets minus current liabilities", "Total equity"],
-          answer: "Current assets minus current liabilities"
-        },
-        {
-          q: "Which is NOT part of a balance sheet?",
-          options: ["Assets", "Liabilities", "Income", "Equity"],
-          answer: "Income"
-        }
-      ],
-      "300": [
-        {
-          q: "What does ROI stand for?",
-          options: ["Rate of Interest", "Return on Investment", "Refund of Income", "Ratio of Investment"],
-          answer: "Return on Investment"
-        },
-        {
-          q: "Depreciation is best described as:",
-          options: ["Appreciating assets", "Value increase", "Asset wear and tear", "Bank charges"],
-          answer: "Asset wear and tear"
-        }
-      ],
-      "400": [
-        {
-          q: "Basel III is related to:",
-          options: ["Climate Change", "Banking Regulation", "Oil Prices", "Crypto Mining"],
-          answer: "Banking Regulation"
-        },
-        {
-          q: "Enterprise Risk Management includes:",
-          options: ["Only finance risks", "Physical risks only", "All organization-wide risks", "None of the above"],
-          answer: "All organization-wide risks"
-        }
-      ]
+  </div>  <script type="module">
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-app.js";
+    import { getFirestore, collection, query, where, getDocs } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-firestore.js";
+
+    const firebaseConfig = {
+      apiKey: "AIzaSyCH5H1FWEcHmQiCQhoc6GE8GhizqhTZoQc",
+      authDomain: "finsa-connect.firebaseapp.com",
+      projectId: "finsa-connect",
+      storageBucket: "finsa-connect.appspot.com",
+      messagingSenderId: "126845965255",
+      appId: "1:126845965255:web:c82539297a8464873d7fe2"
     };
 
-    function loadQuestions() {
-      const level = document.getElementById("level").value;
-      const container = document.getElementById("questions-container");
-      container.innerHTML = "";
-      container.style.display = "block";
+    const app = initializeApp(firebaseConfig);
+    const db = getFirestore(app);
 
-      questions[level].forEach((item, index) => {
-        const div = document.createElement("div");
-        div.className = "question";
+    document.getElementById("startPracticeBtn").addEventListener("click", async () => {
+      const level = document.getElementById("levelSelect").value;
+      if (!level) return alert("Please select your level");
+      const q = query(collection(db, "CBT_Questions"), where("level", "==", level));
+      const snapshot = await getDocs(q);
 
-        const q = document.createElement("h4");
-        q.textContent = `${index + 1}. ${item.q}`;
-        div.appendChild(q);
+      const quizContainer = document.getElementById("quizContainer");
+      quizContainer.innerHTML = "";
 
-        item.options.forEach(opt => {
-          const label = document.createElement("label");
-          label.innerHTML = `<input type="radio" name="q${index}" value="${opt}"> ${opt}`;
-          div.appendChild(label);
-        });
-
-        container.appendChild(div);
+      snapshot.forEach((doc, index) => {
+        const data = doc.data();
+        const questionBox = document.createElement("div");
+        questionBox.className = "question-box";
+        questionBox.innerHTML = `
+          <h3>Q${index + 1}: ${data.question}</h3>
+          <div class="option"><input type="radio" name="q${index}" value="a"> A. ${data.options.a}</div>
+          <div class="option"><input type="radio" name="q${index}" value="b"> B. ${data.options.b}</div>
+          <div class="option"><input type="radio" name="q${index}" value="c"> C. ${data.options.c}</div>
+          <div class="option"><input type="radio" name="q${index}" value="d"> D. ${data.options.d}</div>
+        `;
+        quizContainer.appendChild(questionBox);
       });
-    }
+    });
   </script></body>
 </html>
